--- a/portfolio/stories/iaae.html
+++ b/portfolio/stories/iaae.html
@@ -26,7 +26,7 @@
 	<meta name="keywords" content="meta keywords, kode kenobi, kode, kenobi, graphic designer, website developer, website designer, johannesburg website developer, johannesburg website designer, johannesburg graphic designer">
 
 	  <!-- Facebook integration -->
-	  <meta property="og:title" content="Kode Kenobi" />
+	  <meta property="og:title" content="Kode Kenobi | Portfolio | Stories | IAAE" />
 	  <meta property="og:image" content="https://kodekenobi.github.io/assets/images/favicon.png" />
 	  <meta property="og:url" content="https://kodekenobi.github.io/portfolio/stories/iaae.html" />
 	  <meta property="og:site_name" content="I Am An Entrepreneur" />
@@ -38,7 +38,7 @@
 	  <meta name="twitter:card" content="summary_large_image">
 	  <meta name="twitter:site" content="@kodekenobi">
 	  <meta name="twitter:creator" content="@kodekenobi">
-	  <meta name="twitter:title" content="Kode Kenobi" />
+	  <meta name="twitter:title" content="Kode Kenobi | Portfolio | Stories | IAAE" />
 	  <meta property="og:description" content="IAAE" />
 	  <meta name="twitter:url" content="https://kodekenobi.github.io/portfolio/stories/iaae.html" />
 	  <meta name="twitter:image" content="https://kodekenobi.github.io/assets/images/favicon.png" />
@@ -102,7 +102,7 @@
               <li><a href="../portfolio.html">Stories</a></li>
               <li><a href="../portfolio.html#About">About</a></li>
               <li><a href="../archive.html">Archive</a></li>
-              <li><a href="../projects.html">Projects</a></li>
+              <li><a href="../nusuru.html">Nusuru Foundation</a></li>
             </ul>
           </div>
 
@@ -214,7 +214,7 @@
         <li><a href="../portfolio.html">Stories</a></li>
         <li><a href="../portfolio.html#About">About</a></li>
         <li><a href="../archive.html">Archive</a></li>
-        <li><a href="../projects.html">Projects</a></li>
+        <li><a href="../nusuru.html">Nusuru Foundation</a></li>
       </ul>
     </nav>
 
@@ -265,8 +265,8 @@
           <a href="../../main.html">Home</a>          
           <a href="../portfolio.html">Stories</a>
           <a href="../portfolio.html#About">About</a>
-          <a href="archive.html">Archive</a>
-          <a href="projects.html">Projects</a>
+          <a href="../archive.html">Archive</a>
+          <a href="../nusuru.html">Nusuru Foundation</a>
         </div>
 
         <div class="col-lg-2 col-sm-2 col-xs-2 menu-footer-fa">
