--- a/portfolio/stories/suprime.html
+++ b/portfolio/stories/suprime.html
@@ -11,7 +11,7 @@
   <!-- Descriptions -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Kode Kenobi | Portfolio | I Am An Entrepreneur</title>
+  <title>Kode Kenobi | Portfolio | Suprime Investments</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="author" content="Kode Kenobi" />
@@ -97,7 +97,7 @@
               <li><a href="../portfolio.html">Stories</a></li>
               <li><a href="../portfolio.html#About">About</a></li>
               <li><a href="../archive.html">Archive</a></li>
-              <li><a href="../projects.html">Projects</a></li>
+              <li><a href="../nusuru.html">Nusuru Foundation</a></li>
             </ul>
           </div>
 
@@ -213,7 +213,7 @@
         <li><a href="../portfolio.html">Stories</a></li>
         <li><a href="../portfolio.html#About">About</a></li>
         <li><a href="../archive.html">Archive</a></li>
-        <li><a href="../projects.html">Projects</a></li>
+        <li><a href="../nusuru.html">Nusuru Foundation</a></li>
       </ul>
     </nav>
 
@@ -265,7 +265,7 @@
           <a href="../portfolio.html">Stories</a>
           <a href="../portfolio.html#About">About</a>
           <a href="archive.html">Archive</a>
-          <a href="projects.html">Projects</a>
+          <a href="nusuru.html">Nusuru Foundation</a>
         </div>
 
         <div class="col-lg-2 col-sm-2 col-xs-2 menu-footer-fa">
