--- a/portfolio/stories/synerdy.html
+++ b/portfolio/stories/synerdy.html
@@ -11,7 +11,7 @@
   <!-- Descriptions -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Kode Kenobi | Portfolio | I Am An Entrepreneur</title>
+  <title>Kode Kenobi | Portfolio | Synerdy App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="author" content="Kode Kenobi" />
@@ -39,7 +39,7 @@
 	  <meta name="twitter:site" content="@kodekenobi">
 	  <meta name="twitter:creator" content="@kodekenobi">
 	  <meta name="twitter:title" content="Kode Kenobi" />
-	  <meta property="og:description" content="IAAE" />
+	  <meta property="og:description" content="Synerdy App" />
 	  <meta name="twitter:url" content="https://kodekenobi.github.io/portfolio/stories/synerdy.html" />
 	  <meta name="twitter:image" content="https://kodekenobi.github.io/assets/images/favicon.png" />
 
@@ -97,7 +97,7 @@
               <li><a href="../portfolio.html">Stories</a></li>
               <li><a href="../portfolio.html#About">About</a></li>
               <li><a href="../archive.html">Archive</a></li>
-              <li><a href="../projects.html">Projects</a></li>
+              <li><a href="../nusuru.html">Nusuru Foundation</a></li>
             </ul>
           </div>
 
@@ -240,7 +240,7 @@
         <li><a href="../portfolio.html">Stories</a></li>
         <li><a href="../portfolio.html#About">About</a></li>
         <li><a href="../archive.html">Archive</a></li>
-        <li><a href="../projects.html">Projects</a></li>
+        <li><a href="../nusuru.html">Nusuru Foundation</a></li>
       </ul>
     </nav>
 
@@ -291,7 +291,8 @@
           <a href="../../main.html">Home</a>          
           <a href="../portfolio.html">Stories</a>
           <a href="../portfolio.html#About">About</a>
-          <a href="archive.html">Archive</a>
+          <a href="../archive.html">Archive</a>
+          <a href="../nusuru.html">Nusuru Foundation</a>
         </div>
 
         <div class="col-lg-2 col-sm-2 col-xs-2 menu-footer-fa">
