--- a/portfolio/stories/naspers.html
+++ b/portfolio/stories/naspers.html
@@ -98,7 +98,7 @@
               <li><a href="../portfolio.html">Stories</a></li>
               <li><a href="../portfolio.html#About">About</a></li>
               <li><a href="../archive.html">Archive</a></li>
-              <li><a href="../projects.html">Projects</a></li>
+              <li><a href="../nusuru.html">Nusuru Foundation</a></li>
             </ul>
           </div>
 
@@ -255,6 +255,7 @@
         <li><a href="../portfolio.html">Stories</a></li>
         <li><a href="../portfolio.html#About">About</a></li>
         <li><a href="../archive.html">Archive</a></li>
+        <li><a href="../nusuru.html">Nusuru Foundation</a></li>
       </ul>
     </nav>
 
@@ -304,7 +305,8 @@
           <a href="../../main.html">Home</a>          
           <a href="../portfolio.html">Stories</a>
           <a href="../portfolio.html#About">About</a>
-          <a href="archive.html">Archive</a>
+          <a href="../archive.html">Archive</a>
+          <a href="../nusuru.html">Nusuru Foundation</a>
         </div>
 
         <div class="col-lg-2 col-sm-2 col-xs-2 menu-footer-fa">
