--- a/portfolio/nusuru.html
+++ b/portfolio/nusuru.html
@@ -156,7 +156,7 @@
 
                 </div>
                 <div class="home-img">
-                  <img src="images/nusurubanner.jpg" alt="" width="" height="" class="img-responsive ">
+                  <img src="images/webbannerWEB.jpg" alt="" width="" height="" class="img-responsive ">
                 </div>
 
               </a>
@@ -171,7 +171,7 @@
 
                 </div>
                 <div class="home-img">
-                  <img src="images/flyer1web.jpg" alt="" width="" height="" class="img-responsive ">
+                  <img src="images/flyer3IGweb.jpg" alt="" width="" height="" class="img-responsive ">
                 </div>
 
               </a>
@@ -188,7 +188,7 @@
 
                 </div>
                 <div class="home-img">
-                  <img src="images/nusuru2.jpg" alt="" width="" height="" class="img-responsive ">
+                  <img src="images/flyer1web.jpg" alt="" width="" height="" class="img-responsive ">
                 </div>
 
               </a>
@@ -268,7 +268,7 @@
 
                 </div>
                 <div class="home-img">
-                  <img src="images/flyer1web.jpg" alt="" width="" height="" class="img-responsive ">
+                  <img src="images/webbannerIGweb.jpg" alt="" width="" height="" class="img-responsive ">
                 </div>
 
               </a>
