--- a/portfolio/nusuru.html
+++ b/portfolio/nusuru.html
@@ -20,7 +20,7 @@
 
   <link id='favicon' rel="shortcut icon" href="../../assets/images/logoicon.png" type="image/x-png"> 
 
-	<meta name="description" content="Nusuru Foundation is dream that I had back in 2017. I have always been to give back, to help, to assist, 
+	<meta name="description" content="Nusuru Foundation is dream that I had back in 2017. I have always been driven to give back, to help, to assist, 
   to support so Nusuru Foundation was started as a way to help and support the less fortunate.">
 
 
@@ -42,7 +42,7 @@
 	  <meta property="og:image" content="https://kodekenobi.github.io/assets/portfolio/images/nusuru2.jpg" />
 	  <meta property="og:url" content="https://kodekenobi.github.io/portfolio/nusuru.html" />
 	  <meta property="og:site_name" content="Nusuru Foundation" />
-	  <meta property="og:description" content="Nusuru Foundation is dream that I had back in 2017. I have always been to give back, to help, to assist, 
+	  <meta property="og:description" content="Nusuru Foundation is dream that I had back in 2017. I have always been driven to give back, to help, to assist, 
     to support so Nusuru Foundation was started as a way to help and support the less fortunate." />
 	  <meta property="og:type" content="Nusuru Foundation. Every little bit of hlp goes a long way to someone whohas less." />
 	
@@ -52,7 +52,7 @@
 	  <meta name="twitter:site" content="@kodekenobi">
 	  <meta name="twitter:creator" content="@kodekenobi">
 	  <meta name="twitter:title" content="Nusuru Foundation" />
-	  <meta property="og:description" content="Nusuru Foundation is dream that I had back in 2017. I have always been to give back, to help, to assist, 
+	  <meta property="og:description" content="Nusuru Foundation is dream that I had back in 2017. I have always been driven to give back, to help, to assist, 
     to support so Nusuru Foundation was started as a way to help and support the less fortunate." />
 	  <meta name="twitter:url" content="https://kodekenobi.github.io/portfolio/nusuru.html" />
 	  <meta name="twitter:image" content="https://kodekenobi.github.io/assets/portfolio/images/nusuru2.jpg" />
