--- a/portfolio/nusuru.html
+++ b/portfolio/nusuru.html
@@ -39,7 +39,7 @@
   
 	  <!-- Facebook integration -->
 	  <meta property="og:title" content="Nusuru Foundation" />
-	  <meta property="og:image" content="https://kodekenobi.github.io/assets/portfolio/images/nusuru2.jpg" />
+	  <meta property="og:image:url" content="https://kodekenobi.github.io/assets/portfolio/images/webbannerWEB.jpg" />
 	  <meta property="og:url" content="https://kodekenobi.github.io/portfolio/nusuru.html" />
 	  <meta property="og:site_name" content="Nusuru Foundation" />
 	  <meta property="og:description" content="Nusuru Foundation is dream that I had back in 2017. I have always been driven to give back, to help, to assist, 
