--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	  <!-- Facebook integration -->
 	  <meta property="og:title" content="Kode Kenobi" />
-	  <meta property="og:image" content="https://kodekenobi.github.io/assets/images/favicon.png" />
+	  <meta property="og:image:url" content="https://kodekenobi.github.io/portfolio/images/graphic10.jpg" />
 	  <meta property="og:url" content="https://kodekenobi.github.io/index.html" />
 	  <meta property="og:site_name" content="Kode Kenobi" />
 	  <meta property="og:description" content="I am a programmer and multi-disciplinary visual designer, coding and designing from Wakanda in Johannesburg, South Africa. I am a Full Stack Developer with intermediate experience in Python, C++, C#, Java, HTML, PHP, CSS, JavaScript, Django and Ruby. I am currently learning Data Science, CyberSecurity, Machine Learning and AI.<br />In my free time, I
@@ -43,7 +43,7 @@
 	  <meta property="og:description" content="I am a programmer and multi-disciplinary visual designer, coding and designing from Wakanda in Johannesburg, South Africa. I am a Full Stack Developer with intermediate experience in Python, C++, C#, Java, HTML, PHP, CSS, JavaScript, Django and Ruby. I am currently learning Data Science, CyberSecurity, Machine Learning and AI.<br />In my free time, I
 	  work on Open Source projects and I also read a lot, like a lot." />
 	  <meta name="twitter:url" content="https://kodekenobi.github.io/index.html" />
-	  <meta name="twitter:image" content="https://kodekenobi.github.io/assets/images/favicon.png" />
+	  <meta name="twitter:image" content="https://kodekenobi.github.io/portfolio/images/graphic10.jpg" />
 
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
