--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -39,7 +39,7 @@
 
 	  <!-- Facebook integration -->
 	  <meta property="og:title" content="Kode Kenobi | Portfolio" />
-	  <meta property="og:image" content="https://kodekenobi.github.io/assets/images/favicon.png" />
+	  <meta property="og:image:url" content="https://kodekenobi.github.io/portfolio/images/mbalibanner.jpg" />
 	  <meta property="og:url" content="https://kodekenobi.github.io/portfolio/portfolio.html" />
 	  <meta property="og:site_name" content="Kode Kenobi | Portfolio" />
 	  <meta property="og:description" content="Kode Kenobi basically means Code Master. It's a play on words using my love for code and my love for Star Wars. I am a highly creative and multitalented multi-disciplinary visual designer, full stack developer and software developer with experience in website development, app development, software development, multimedia designs, motion designs, marketing and print designs. I have exceptional collaborative and interpersonal skills." />
@@ -53,7 +53,7 @@
 	  <meta name="twitter:title" content="Kode Kenobi | Portfolio" />
 	  <meta property="og:description" content="Kode Kenobi basically means Code Master. It's a play on words using my love for code and my love for Star Wars. I am a highly creative and multitalented multi-disciplinary visual designer, full stack developer and software developer with experience in website development, app development, software development, multimedia designs, motion designs, marketing and print designs. I have exceptional collaborative and interpersonal skills." />
 	  <meta name="twitter:url" content="https://kodekenobi.github.io/portfolio/portfolio.html" />
-	  <meta name="twitter:image" content="https://kodekenobi.github.io/assets/images/favicon.png" />
+	  <meta name="twitter:image" content="https://kodekenobi.github.io/portfolio/images/mbalibanner.jpg" />
 
   <!-- Fonts and footer icons-->
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,600,800" rel="stylesheet">
