--- a/experience.html
+++ b/experience.html
@@ -31,9 +31,9 @@
 	<meta name="keywords" content="meta keywords, kode kenobi, kode, kenobi, graphic designer, website developer, website designer, johannesburg website developer, johannesburg website designer, johannesburg graphic designer">
 
 	  <!-- Facebook integration -->
-	  <meta property="og:title" content="Kode Kenobi" />
-	  <meta property="og:image" content="https://kodekenobi.github.io/assets/images/favicon.png" />
-	  <meta property="og:url" content="https://kodekenobi.github.io/portfolio/experience.html" />
+	  <meta property="og:title" content="Kode Kenobi | Experience" />
+	  <meta property="og:image:url" content="https://kodekenobi.github.io/assets/images/experience-page/stack.gif" />
+	  <meta property="og:url" content="https://kodekenobi.github.io/experience.html" />
 	  <meta property="og:site_name" content="Kode Kenobi | Experience" />
 	  <meta property="og:description" content="I am a programmer and multi-disciplinary visual designer, coding and designing from Wakanda in Johannesburg, South Africa. I am a Full Stack Developer with intermediate experience in Python, C++, C#, Java, HTML, PHP, CSS, JavaScript, Django and Ruby. I am currently learning Data Science, CyberSecurity, Machine Learning and AI.<br />In my free time, I
 	  work on Open Source projects and I also read a lot, like a lot." />
@@ -47,8 +47,8 @@
 	  <meta name="twitter:title" content="Kode Kenobi | Experience" />
 	  <meta property="og:description" content="I am a programmer and multi-disciplinary visual designer, coding and designing from Wakanda in Johannesburg, South Africa. I am a Full Stack Developer with intermediate experience in Python, C++, C#, Java, HTML, PHP, CSS, JavaScript, Django and Ruby. I am currently learning Data Science, CyberSecurity, Machine Learning and AI.<br />In my free time, I
 	  work on Open Source projects and I also read a lot, like a lot." />
-	  <meta name="twitter:url" content="https://kodekenobi.github.io/portfolio/experience.html" />
-	  <meta name="twitter:image" content="https://kodekenobi.github.io/assets/images/favicon.png" />
+	  <meta name="twitter:url" content="https://kodekenobi.github.io/experience.html" />
+	  <meta name="twitter:image" content="https://kodekenobi.github.io/assets/images/experience-page/stack.gif" />
 
     
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
