--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
 
 	  <!-- Facebook integration -->
 	  <meta property="og:title" content="Kode Kenobi | Home" />
-      <meta property="og:image:url" content="https://kodekenobi.github.io/portfolio.branding18.jpg" />
+      <meta property="og:image:url" content="https://kodekenobi.github.io/portfolio/branding18.jpg" />
 	  <meta property="og:url" content="https://kodekenobi.github.io/main.html" />
 	  <meta property="og:site_name" content="Kode Kenobi Studios" />
 	  <meta property="og:description" content="Welcome To Kode Kenobi Studios. Bringing your ideas to life. Developed and Coded at Kode Kenobi Studios." />
@@ -47,7 +47,7 @@
 	  <meta name="twitter:title" content="Kode Kenobi | Home" />
 	  <meta property="og:description" content="Welcome To Kode Kenobi Studios. Bringing your ideas to life. Developed and Coded at Kode Kenobi Studios." />
 	  <meta name="twitter:url" content="https://kodekenobi.github.io/main.html" />
-	  <meta name="twitter:image" content="https://kodekenobi.github.io/portfolio.branding18.jpg" />
+	  <meta name="twitter:image" content="https://kodekenobi.github.io/portfolio/branding18.jpg" />
         
     <!--For Dark/Light mode Toggle-->
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
