--- a/portfolio/nusuru.html
+++ b/portfolio/nusuru.html
@@ -40,7 +40,7 @@
 	  <meta property="og:image:url" content="https://kodekenobi.github.io/portfolio/images/webbannerWEB.jpg" />
 	  <meta property="og:url" content="https://kodekenobi.github.io/portfolio/nusuru.html" />
 	  <meta property="og:site_name" content="Nusuru Found" />
-	  <meta property="og:description" content="Nusuru Foundation is dream that I had back in 2017. I have always been driven to give back, to help, to assist, 
+	  <meta property="og:description" content="Nusuru is a Swahili term that means to help, assist, save, defend, support or guard. Nusuru Foundation is dream that I had back in 2017. I have always been driven to give back, to help, to assist, 
     to support so Nusuru Foundation was started as a way to help and support the less fortunate." />
 	  <meta property="og:type" content="Nusuru Foundation. Every little bit of hlp goes a long way to someone whohas less." />
 	
@@ -53,7 +53,7 @@
 	  <meta property="og:description" content="Nusuru Foundation is dream that I had back in 2017. I have always been driven to give back, to help, to assist, 
     to support so Nusuru Foundation was started as a way to help and support the less fortunate." />
 	  <meta name="twitter:url" content="https://kodekenobi.github.io/portfolio/nusuru.html" />
-	  <meta name="twitter:image" content="https://kodekenobi.github.io/portfolio/images/webbannerWEB.jpg" />
+	  <meta name="twitter:image:url" content="https://kodekenobi.github.io/portfolio/images/webbannerWEB.jpg" />
 
   <!-- Fonts and footer icons-->
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,600,800" rel="stylesheet">
