--- a/portfolio/nusuru.html
+++ b/portfolio/nusuru.html
@@ -46,7 +46,7 @@
 	
 	  <!-- Twitter integration -->
 
-	  <meta name="twitter:card" content="summary_large_image">
+	  <meta name="twitter:card" content="summary">
 	  <meta name="twitter:site" content="@kodekenobi">
 	  <meta name="twitter:creator" content="@kodekenobi">
 	  <meta name="twitter:title" content="Nusuru Foundation" />
