--- a/portfolio/nusuru.html
+++ b/portfolio/nusuru.html
@@ -49,6 +49,7 @@
 	  <meta name="twitter:card" content="summary">
 	  <meta name="twitter:site" content="@kodekenobi">
 	  <meta name="twitter:creator" content="@kodekenobi">
+    <meta property="og:image" content="https://kodekenobi.github.io/portfolio/images/webbannerWEB.jpg" />
 	  <meta name="twitter:title" content="Nusuru Foundation" />
 	  <meta property="og:description" content="Nusuru Foundation is dream that I had back in 2017. I have always been driven to give back, to help, to assist, 
     to support so Nusuru Foundation was started as a way to help and support the less fortunate." />
