--- a/portfolio/nusuru.html
+++ b/portfolio/nusuru.html
@@ -39,7 +39,7 @@
 	  <meta property="og:title" content="Nusuru Foundation" />
 	  <meta property="og:image:url" content="https://kodekenobi.github.io/portfolio/images/webbannerWEB.jpg" />
 	  <meta property="og:url" content="https://kodekenobi.github.io/portfolio/nusuru.html" />
-	  <meta property="og:site_name" content="Nusuru Found" />
+	  <meta property="og:site_name" content="Nusuru Foundation" />
 	  <meta property="og:description" content="Nusuru is a Swahili term that means to help, assist, save, defend, support or guard. Nusuru Foundation is dream that I had back in 2017. I have always been driven to give back, to help, to assist, 
     to support so Nusuru Foundation was started as a way to help and support the less fortunate." />
 	  <meta property="og:type" content="Nusuru Foundation. Every little bit of hlp goes a long way to someone whohas less." />
@@ -51,7 +51,7 @@
 	  <meta name="twitter:creator" content="@kodekenobi">
     <meta property="og:image" content="https://kodekenobi.github.io/portfolio/images/webbannerWEB.jpg" />
 	  <meta name="twitter:title" content="Nusuru Foundation" />
-	  <meta property="og:description" content="Nusuru Foundation is dream that I had back in 2017. I have always been driven to give back, to help, to assist, 
+	  <meta property="og:description" content="Nusuru is a Swahili term that means to help, assist, save, defend, support or guard. Nusuru Foundation is dream that I had back in 2017. I have always been driven to give back, to help, to assist, 
     to support so Nusuru Foundation was started as a way to help and support the less fortunate." />
 	  <meta name="twitter:url" content="https://kodekenobi.github.io/portfolio/nusuru.html" />
 	  <meta name="twitter:image:url" content="https://kodekenobi.github.io/portfolio/images/webbannerWEB.jpg" />
@@ -232,7 +232,7 @@
 
           <h2 style="padding-bottom:36px">Just a few words about Nusuru Foundation.</h2>
           <p style="padding-bottom:24px">
-              Nusuru Foundation is dream that I had back in 2017. I have always been driven to give back, to help, to assist, 
+              Nusuru is a Swahili term that means to help, assist, save, defend, support or guard. Nusuru Foundation is dream that I had back in 2017. I have always been driven to give back, to help, to assist, 
               to support so Nusuru Foundation was started as a way to help and support the less fortunate. I don't
               want to live in the kind of world where we don't look out for each other. Not just the people that are close to us, 
               but anybody who needs a helping hand.
