--- a/portfolio/archive.html
+++ b/portfolio/archive.html
@@ -38,21 +38,22 @@
         <meta property="og:title" content="Kode Kenobi | Portfolio | Archives">
 
 	  <!-- Facebook integration -->
-	  <meta property="og:title" content="Kode Kenobi | Portfolio | Archives" />
-	  <meta property="og:image:url" content="https://kodekenobi.github.io/portfolio/images/branding2.jpg" />
-	  <meta property="og:url" content="https://kodekenobi.github.io/portfolio/archive.html" />
-	  <meta property="og:description" content="Welcome to the archive section. This is a catalogue of my best work. Why don't you visit this page and scroll through the work I have done in the past. This website is hosted on Github and it's to showcase my portfolio and also show what design and code can bring to life with just 25MB of space." />
-	  <meta property="og:type" content="Kode Kenobi | Portfolio | Archives" />
+	  <meta property="og:title" content="Kode Kenobi | Portfolio" />
+	  <meta property="og:image:url" content="https://kodekenobi.github.io/portfolio/images/mbalibanner.jpg" />
+	  <meta property="og:url" content="https://kodekenobi.github.io/portfolio/portfolio.html" />
+	  <meta property="og:site_name" content="Kode Kenobi | Portfolio" />
+	  <meta property="og:description" content="Kode Kenobi basically means Code Master. It's a play on words using my love for code and my love for Star Wars. I am a highly creative and multitalented multi-disciplinary visual designer, full stack developer and software developer with experience in website development, app development, software development, multimedia designs, motion designs, marketing and print designs. I have exceptional collaborative and interpersonal skills." />
+	  <meta property="og:type" content="Kode Kenobi | Portfolio" />
 	
 	  <!-- Twitter integration -->
 
 	  <meta name="twitter:card" content="summary_large_image">
 	  <meta name="twitter:site" content="@kodekenobi">
 	  <meta name="twitter:creator" content="@kodekenobi">
-	  <meta name="twitter:title" content="Kode Kenobi | Portfolio | Archives" />
-	  <meta property="og:description" content="Welcome to the archive section. This is a catalogue of my best work. Why don't you visit this page and scroll through the work I have done in the past. This website is hosted on Github and it's to showcase my portfolio and also show what design and code can bring to life with just 25MB of space." />
-	  <meta name="twitter:url" content="https://kodekenobi.github.io/portfolio/archive.html" />
-	  <meta name="twitter:image" content="https://kodekenobi.github.io/portfolio/images/branding2.jpg" />
+	  <meta name="twitter:title" content="Kode Kenobi | Portfolio" />
+	  <meta property="og:description" content="Kode Kenobi basically means Code Master. It's a play on words using my love for code and my love for Star Wars. I am a highly creative and multitalented multi-disciplinary visual designer, full stack developer and software developer with experience in website development, app development, software development, multimedia designs, motion designs, marketing and print designs. I have exceptional collaborative and interpersonal skills." />
+	  <meta name="twitter:url" content="https://kodekenobi.github.io/portfolio/portfolio.html" />
+	  <meta name="twitter:image" content="https://kodekenobi.github.io/portfolio/images/mbalibanner.jpg" />
 
     <!-- Fonts and footer icons-->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,600,800" rel="stylesheet">
