--- a/portfolio/archive.html
+++ b/portfolio/archive.html
@@ -35,7 +35,7 @@
       
         <meta property="og:site_name" content="https://kodekenobi.github.io/portfolio/archive.html">
       
-        <meta property="og:title" content="Kode Kenobi | Portfolio | Archives">
+        <meta property="og:title" content="Kode Kenobi | Portfolio |">
 
 	  <!-- Facebook integration -->
 	  <meta property="og:title" content="Kode Kenobi | Portfolio" />
