--- a/portfolio/stories/suprime.html
+++ b/portfolio/stories/suprime.html
@@ -27,7 +27,7 @@
 
 	  <!-- Facebook integration -->
 	  <meta property="og:title" content="Kode Kenobi" />
-	  <meta property="og:image" content="https://kodekenobi.github.io/assets/images/favicon.png" />
+	  <meta property="og:image" content="https://kodekenobi.github.io/assets/images/suprime1.jpg" />
 	  <meta property="og:url" content="https://kodekenobi.github.io/portfolio/stories/suprime.html" />
 	  <meta property="og:site_name" content="Suprime Investments" />
 	  <meta property="og:description" content="Suprime Investments" />
@@ -41,7 +41,7 @@
 	  <meta name="twitter:title" content="Kode Kenobi" />
 	  <meta property="og:description" content="Suprime Investments" />
 	  <meta name="twitter:url" content="https://kodekenobi.github.io/portfolio/stories/suprime.html" />
-	  <meta name="twitter:image" content="https://kodekenobi.github.io/assets/images/favicon.png" />
+	  <meta name="twitter:image" content="https://kodekenobi.github.io/assets/images/suprime1.jpg" />
 
   <!-- Fonts and footer icons-->
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,600,800" rel="stylesheet">
