--- a/index.html
+++ b/index.html
@@ -95,14 +95,16 @@
 						Now, introductions aside, kindly visit my website <a href="main.html">here</a>.
 					</div>
 
-					<div class="topic_header">SEE ALSO</div>
-					<div class="topic_text">-</div>
+					<div class="topic_header">My C.V</div>
+					<div class="topic_text">
+						You can download my C.V <a href="portfolio/cv.docx">here</a>.
+					</div>
 
 					<div class="topic_header">HISTORY</div>
 					<div class="topic_text">-</div>
 
 				<div id="innerfooter">
-					Latest Update - 05/20/2021 V-21.5.20
+					Latest Update - 05/22/2021 V-21.5.22
 				</div>
 			</div>
 		</div>
@@ -124,6 +126,7 @@
 		<div class="wrap" >
 			<a class="project-button" href="portfolio/portfolio.html">Portfolio</a>
 			<a class="project-button" href="main.html">Website</a>
+			<a class="project-button" href="portfolio/cv.docx">C.V</a>
 		</div>
 	</div>
 
