--- a/portfolio/stories/synerdy.html
+++ b/portfolio/stories/synerdy.html
@@ -38,8 +38,8 @@
         <meta property="og:title" content="Kode Kenobi | Portfolio | Stories | Synerdy App">
 
 	  <!-- Facebook integration -->
-	  <meta property="og:title" content="Kode Kenobi" />
-	  <meta property="og:image" content="https://kodekenobi.github.io/assets/images/synerdy-01.jpg" />
+	  <meta property="og:title" content="Kode Kenobi | Portfolio | Stories | Synerdy App" />
+	  <meta property="og:image:url" content="https://kodekenobi.github.io/assets/images/synerdy-01.jpg" />
 	  <meta property="og:url" content="https://kodekenobi.github.io/portfolio/stories/synerdy.html" />
 	  <meta property="og:site_name" content="Kode Kenobi | Portfolio | Stories | Synerdy App" />
 	  <meta property="og:description" content="Synerdy App is the first comic book app in South Africa and the first comic book marketplace app in the world. You can purchase products and navigate your way around the app easily with our sleek and easy to understand User Interface." />
@@ -50,7 +50,7 @@
 	  <meta name="twitter:card" content="summary_large_image">
 	  <meta name="twitter:site" content="@kodekenobi">
 	  <meta name="twitter:creator" content="@kodekenobi">
-	  <meta name="twitter:title" content="Kode Kenobi" />
+	  <meta name="twitter:title" content="Kode Kenobi | Portfolio | Stories | Synerdy App" />
 	  <meta property="og:description" content="Synerdy App is the first comic book app in South Africa and the first comic book marketplace app in the world. You can purchase products and navigate your way around the app easily with our sleek and easy to understand User Interface." />
 	  <meta name="twitter:url" content="https://kodekenobi.github.io/portfolio/stories/synerdy.html" />
 	  <meta name="twitter:image" content="https://kodekenobi.github.io/assets/images/synerdy-01.jpg" />
