--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="/assets/images/favicon-transparent.png"
+      href="/kodekenobi.github.io/assets/images/favicon-transparent.png"
       id="favicon"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -65,8 +65,8 @@
 
             // Update favicon
             favicon.href = isVisible
-              ? "/assets/images/favicon-transparent.png"
-              : "/assets/images/favicon-transparent.png";
+              ? "/kodekenobi.github.io/assets/images/favicon-transparent.png"
+              : "/kodekenobi.github.io/assets/images/favicon-transparent.png";
 
             // Update title with warning emojis
             pageTitle.textContent = isVisible ? alertTitle : originalTitle;
@@ -74,10 +74,31 @@
         } else {
           // Stop blinking and reset to original when tab is active
           clearInterval(blinkInterval);
-          favicon.href = "/assets/images/favicon-transparent.png";
+          favicon.href =
+            "/kodekenobi.github.io/assets/images/favicon-transparent.png";
           pageTitle.textContent = originalTitle;
         }
       });
+
+      // Single Page Apps for GitHub Pages
+      // MIT License
+      // https://github.com/rafgraph/spa-github-pages
+      (function (l) {
+        if (l.search[1] === "/") {
+          var decoded = l.search
+            .slice(1)
+            .split("&")
+            .map(function (s) {
+              return s.replace(/~and~/g, "&");
+            })
+            .join("?");
+          window.history.replaceState(
+            null,
+            null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      })(window.location);
     </script>
   </head>
   <body>
