--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         }
       })(window.location);
     </script>
-    <script type="module" crossorigin src="/kodekenobi.github.io/assets/index.CTONOEkk.js"></script>
+    <script type="module" crossorigin src="/kodekenobi.github.io/assets/index.Ba6F83iR.js"></script>
     <link rel="stylesheet" crossorigin href="/kodekenobi.github.io/assets/index.Bblvy-IX.css">
   </head>
   <body>
